--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
-// Colors
 $green: #08d245;
-$greenOld: #00bf63;
+$greenHover: #09ba3e;
+$greenActive: #089933;
 $black: #171717;
 $lightBlack: #202020;
 $white: #f9f8f3;
