--- a/src/components/UI/Dropdown/Dropdown.module.scss
+++ b/src/components/UI/Dropdown/Dropdown.module.scss
@@ -9,9 +9,8 @@
 
   background-color: $lightBlack;
   box-shadow: 0 2px 10px 4px rgba(0, 0, 0, 0.2);
+  border-radius: $borderRadius;
   transition: 0.3s;
-  border-bottom-left-radius: $borderRadius;
-  border-bottom-right-radius: $borderRadius;
 
   opacity: 0;
   pointer-events: none;
