--- a/src/components/UI/Header/Header.module.scss
+++ b/src/components/UI/Header/Header.module.scss
@@ -2,24 +2,30 @@
 @import '@/styles/keyframes';
 
 .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
+  padding: 0 20px;
+
+  padding: 10px 5px;
+
   color: $white;
 
   transition: 0.3s;
-  background-color: $black;
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
 
   &_stick {
-    position: sticky;
-    z-index: 1;
-    top: 0;
-    animation: 0.3s slideDown;
+    padding: 0;
+    background-color: $black;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
   }
 }
 
 .nav {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  font-weight: 500;
+  font-weight: 600;
 
   &__list {
     place-self: center left;
