--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 @import-normalize;
 @import './variables.scss';
 
@@ -33,16 +33,12 @@ body {
 }
 
 .container {
-  max-width: 1260px;
-
+  max-width: 1160px;
   margin: 0 auto;
-  padding: 0 15px;
 }
 
 .page {
   flex-grow: 1;
-  padding: 20px 15px;
-  height: 1000px;
 }
 
 a {
@@ -52,4 +48,8 @@ a {
 
 ul {
   list-style: none;
+}
+
+:root {
+  --swiper-theme-color: #f9f8f3 !important;
 }
