feat: create advatages section

--- a/src/components/PromoSlider/PromoSlider.module.scss
+++ b/src/components/PromoSlider/PromoSlider.module.scss
@@ -6,6 +6,7 @@
   max-height: 100vh;
 
   background-color: $black;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
 
   &__image {
     width: 100%;
@@ -21,7 +22,8 @@
     right: 0;
     bottom: 0;
 
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: $black;
+    opacity: .4;
   }
 
   &__content {
