--- a/src/components/UI/Header/Header.module.scss
+++ b/src/components/UI/Header/Header.module.scss
@@ -58,7 +58,21 @@
     }
   }
 
-  &__socials {
+  &__contacts {
     place-self: center right;
+
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+
+  &__number {
+    padding: 10px;
+
+    transition: 0.3s;
+
+    &:hover {
+      opacity: 0.7;
+    }
   }
 }
