--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -16,7 +16,7 @@ html {
 body {
   font-family: 'Montserrat', 'Arial', sans-serif;
   font-size: 1rem;
-  font-weight: 400;
+  font-weight: 500;
   color: $black;
 
   background-color: $white;
@@ -34,7 +34,9 @@ body {
 
 .container {
   max-width: 1160px;
+
   margin: 0 auto;
+  padding: 0 15px;
 }
 
 .page {
