--- a/src/components/Advantages/Advantages.module.scss
+++ b/src/components/Advantages/Advantages.module.scss
@@ -13,13 +13,13 @@
     width: 100%;
     height: 100%;
 
-    background-image: url(../../assets/images/texture.jpg);
+    background-image: url(../../assets/images/white-texture.jpg);
     background-position: bottom;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
 
-    opacity: 0.3;
+    opacity: 0.5;
   }
 
   &__wrapper {
@@ -37,7 +37,7 @@
     font-size: 2rem;
     white-space: nowrap;
 
-    border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 2px solid $green;
 
     &_we {
       color: $green;
@@ -68,17 +68,14 @@
 .advantage {
   padding: 30px;
 
-  background-color: $white;
-  border-radius: $borderRadius;
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 15px 0px;
-
   &__title {
+    margin-top: 10px;
     margin-bottom: 15px;
     padding-bottom: 15px;
 
     font-size: 1.4rem;
     font-weight: 600;
 
-    border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 2px solid $green;
   }
 }
