--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 @import-normalize;
 @import './variables.scss';
+@import './mixins.scss';
 
 * {
   padding: 0;
@@ -41,6 +42,28 @@ body {
 
 .page {
   flex-grow: 1;
+}
+
+.title {
+  max-width: 50%;
+
+  margin-bottom: 20px;
+  padding-bottom: 15px;
+
+  font-size: 2rem;
+  white-space: nowrap;
+
+  &_center {
+    @include BorderBottomGradientCenter;
+  }
+
+  &_left {
+    @include BorderBottomGradientLeft;
+  }
+
+  &_right {
+    @include BorderBottomGradientRight;
+  }
 }
 
 a {
