--- a/src/components/Advantages/Advantages.module.scss
+++ b/src/components/Advantages/Advantages.module.scss
@@ -7,25 +7,7 @@
   text-align: center;
 
   &__bg {
-    position: absolute;
-
-    z-index: -1;
-
-    width: 100%;
-    height: 100%;
-
-    background-image: url(../../assets/images/white-texture.jpg);
-    background-position: bottom;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-
-    opacity: 0.5;
-  }
-
-  &__wrapper {
-    padding-top: 100px;
-    padding-bottom: 50px;
+    @include TextureBackground;
   }
 
   &__title {
