feat: added icons for advatages section

--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -4,6 +4,10 @@
 .contacts {
   position: relative;
 
+  color: $white;
+
+  background-color: $lightBlack;
+
   &__bg {
     @include TextureBackground;
   }
