--- a/src/components/Advantages/Advantages.module.scss
+++ b/src/components/Advantages/Advantages.module.scss
@@ -10,6 +10,10 @@
     @include TextureBackground;
   }
 
+  &__wrapper {
+    padding-bottom: 40px;
+  }
+
   &__title {
     margin: 0 auto;
     margin-bottom: 20px;
