feat: update images for slide and product cards

--- a/src/components/PromoSlider/PromoSlider.module.scss
+++ b/src/components/PromoSlider/PromoSlider.module.scss
@@ -22,8 +22,8 @@
     right: 0;
     bottom: 0;
 
-    background-color: $black;
-    opacity: .4;
+    background-color: black;
+    opacity: .5;
   }
 
   &__content {
