--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -32,7 +32,7 @@
       box-shadow: 0px 0px 8px 2px rgba(34, 60, 80, 0.3);
 
       .products__image {
-        transform: scale(1.05);
+        transform: scale(1.02);
       }
     }
   }
@@ -42,14 +42,15 @@
     height: 250px;
   
     margin-bottom: 15px;
-    
-    object-fit: cover;
     overflow: hidden;
   }
 
   &__image {
     width: 100%;
     height: 100%;
+
+    object-fit: cover;
+    object-position: center;
 
     transition: .3s;
   }
