--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -12,6 +12,19 @@
 html {
   scroll-behavior: smooth;
   font-size: 16px;
+
+  min-width: 320px;
+  overflow-x: hidden;
+
+  & ::-webkit-scrollbar {
+    width: 4px;
+  }
+
+  & ::-webkit-scrollbar-thumb {
+    background: rgba(181,183,194, 1);
+    border-radius: $borderRadius;
+    cursor: pointer;
+  }
 }
 
 body {
@@ -45,8 +58,8 @@ body {
 }
 
 .section {
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 80px;
+  padding-bottom: 80px;
 }
 
 .title {
