--- a/src/components/SocialsList/SocialsList.module.scss
+++ b/src/components/SocialsList/SocialsList.module.scss
@@ -11,5 +11,12 @@
     &:hover {
       opacity: 0.7;
     }
+
+    &_full {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 5px;
+    }
   }
 }
