--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,3 +6,6 @@ $lightBlack: #202020;
 $white: #f9f8f3;
 
 $borderRadius: 5px;
+
+$boxShadowLight: 0px 0px 8px 0px rgba(34, 60, 80, 0.2);
+$boxShadowStrong: 0px 0px 8px 2px rgba(34, 60, 80, 0.3);
