feat: create services section

--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -2,6 +2,7 @@
 @import '@/styles/mixins';
 
 .contacts {
+  padding-top: 80px;
   color: $white;
 
   background-image: url(../../assets/images/background.jpg);
