--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -11,6 +11,7 @@
   background-color: $green;
   border: 2px solid transparent;
   border-radius: $borderRadius;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);;
   transition: .3s;
   cursor: pointer;
 
