--- a/src/components/Services/ServicesGroup/ServicesGroup.module.scss
+++ b/src/components/Services/ServicesGroup/ServicesGroup.module.scss
@@ -7,18 +7,7 @@
   border-bottom: 2px solid rgba(0, 0, 0, 0.1);
   transition: 0.3s;
 
-  &:hover {
-    box-shadow: $boxShadowLight;
-  }
-
-  &:first-child {
-    border-top-right-radius: $borderRadius;
-    border-top-left-radius: $borderRadius;
-  }
-
   &:last-child {
-    border-bottom-right-radius: $borderRadius;
-    border-bottom-left-radius: $borderRadius;
     border: none;
   }
 }
@@ -33,6 +22,16 @@
 
   transition: 0.3s;
   cursor: pointer;
+
+  &:hover {
+    .toggler {
+      background-color: $green;
+
+      & svg path {
+        stroke: $white;
+      }
+    }
+  }
 }
 
 .toggler {
@@ -40,22 +39,21 @@
   justify-content: center;
   align-items: center;
 
-  padding: 10px;
+  padding: 5px;
 
   background-color: transparent;
   border: none;
-  border-radius: $borderRadius;
+  border-radius: 50%;
   transition: 0.3s;
   cursor: pointer;
 
   & svg {
     transition: 0.3s;
-    opacity: 0.4;
   }
 
   &_active {
     & svg {
-      transform: rotate(0deg);
+      transform: rotate(-45deg);
     }
   }
 }
