--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -5,7 +5,7 @@
   padding-top: 80px;
   color: $white;
 
-  background-image: url(../../assets/images/background.jpg);
+  background-image: url('/images/background.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -19,6 +19,10 @@
     border-radius: $borderRadius;
     box-shadow: $boxShadowStrong;
     overflow: hidden;
+  }
+
+  &__title {
+    margin-bottom: 15px;
   }
 
   &__info {
