--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -1,7 +1,11 @@
 @import '@/styles/variables';
 
 .button {
-  display: inline-block;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+
   padding: 10px 15px;
 
   font: inherit;
@@ -11,8 +15,8 @@
   background-color: $green;
   border: 2px solid transparent;
   border-radius: $borderRadius;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);;
-  transition: .3s;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  transition: 0.3s;
   cursor: pointer;
 
   &:hover {
