--- a/src/components/UI/Texture/Texture.module.scss
+++ b/src/components/UI/Texture/Texture.module.scss
@@ -3,19 +3,23 @@
 
   display: flex;
   flex-direction: column;
-
-  clip-path: inset(0 0 0 0);
+  justify-content: space-between;
 
   &__bg {
-    position: fixed;
+    position: absolute;
     z-index: -1;
 
-    left: 0;
     top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 
-    width: 100%;
-    height: 100%;
+    background-image: url('/images/white-texture.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 
-    opacity: 0.5;
+    opacity: 0.6;
   }
 }
