--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 @import-normalize;
 @import './variables.scss';
 @import './mixins.scss';
@@ -19,7 +18,7 @@ html {
 }
 
 body {
-  font-family: 'Montserrat', 'Arial', sans-serif;
+  font-family: inherit;
   font-size: 1rem;
   font-weight: 500;
   color: $black;
