--- a/src/components/UI/ScrollToTop/ScrollToTop.module.scss
+++ b/src/components/UI/ScrollToTop/ScrollToTop.module.scss
@@ -4,38 +4,39 @@
   position: fixed;
 
   right: 15px;
-  bottom: 15px;
+  bottom: 0;
 
   display: flex;
   justify-content: center;
   align-items: center;
 
-  padding: 15px;
+  padding: 10px 15px;
+  padding-bottom: 12px;
 
   background-color: $lightBlack;
   border: none;
-  border-radius: $borderRadius;
+  border-top-left-radius: $borderRadius;
+  border-top-right-radius: $borderRadius;
   box-shadow: $boxShadowLight;
   transition: 0.3s;
   cursor: pointer;
 
   opacity: 0;
   pointer-events: none;
+  transform: translateY(100%);
 
   &:hover {
-    opacity: 1;
+    opacity: 0.8;
+    transform: translateY(0);
   }
 
   &:active {
     opacity: 0.7;
   }
 
-  & svg {
-    transform: translateY(-0.5px);
-  }
-
   &_show {
     opacity: 0.5;
     pointer-events: all;
+    transform: translateY(15%);
   }
 }
