--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -18,3 +18,9 @@
   @include borderBottomGradient;
   border-image-source: linear-gradient(260deg, rgba(8, 210, 69, 1) 0%, rgba(249, 248, 243, 0) 100%);
 }
+
+@mixin CardsContainer() {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 15px;
+}
