--- a/src/components/PromoSlider/PromoSlider.module.scss
+++ b/src/components/PromoSlider/PromoSlider.module.scss
@@ -42,7 +42,10 @@
   }
 
   &__description {
+    max-width: 70%;
+    margin: 0 auto;
     margin-bottom: 20px;
+    
     font-size: 1.3rem;
   }
 }
