--- a/src/components/UI/Background/Background.module.scss
+++ b/src/components/UI/Background/Background.module.scss
@@ -1,15 +1,11 @@
-.section {
+.container {
   position: relative;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
 
   width: 100%;
   clip-path: inset(0 0 0 0);
 }
 
-.wrapper {
+.imageWrapper {
   position: fixed;
   z-index: -1;
   
@@ -25,4 +21,9 @@
 .image {
   object-fit: cover;
   object-position: center;
+}
+
+.children {
+  display: flex;
+  flex-direction: column;
 }
