--- a/src/components/Advantages/Advantages.module.scss
+++ b/src/components/Advantages/Advantages.module.scss
@@ -40,3 +40,78 @@
     @include BorderBottomGradientCenter;
   }
 }
+
+@media (max-width: $laptop) {
+  .advantages {
+    &__tagline {
+      margin-bottom: 20px;
+    }
+
+    &__list {
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(2, min-content);
+      row-gap: 0;
+    }
+  }
+
+  .advantage {
+    padding: 15px 30px;
+
+    &:nth-child(1) {
+      grid-column: 1 / 2;
+      grid-row: 1 / 2;
+    }
+
+    &:nth-child(2) {
+      grid-column: 2 / 3;
+      grid-row: 1 / 2;
+    }
+
+    &:nth-child(3) {
+      grid-column: 1 / 3;
+      grid-row: 2 / 3;
+
+      place-self: center center;
+      max-width: 50%;
+    }
+  }
+}
+
+@media screen and (max-width: $tablet) {
+  .advantages {
+    &__list {
+      @media screen and (max-width: $tablet) {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(3, min-content);
+      }
+    }
+  }
+
+  .advantage {
+    max-width: 425px;
+    place-self: center center;
+
+    &:nth-child(1) {
+      grid-column: 1 / 2;
+      grid-row: 1 / 2;
+    }
+
+    &:nth-child(2) {
+      grid-column: 1 / 2;
+      grid-row: 2 / 3;
+    }
+
+    &:nth-child(3) {
+      grid-column: 1 / 2;
+      grid-row: 3 / 4;
+
+      max-width: 425px;
+    }
+  }
+}
+
+@media (max-width: $mobileL) {
+  .advantage {
+    padding: 15px;
+  }
+}
