--- a/src/components/SocialsList/SocialsList.module.scss
+++ b/src/components/SocialsList/SocialsList.module.scss
@@ -1,6 +1,9 @@
+@import '@/styles/variables';
+
 .socials {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   gap: 5px;
 
   &__link {
