--- a/src/components/Works/WorkItem/WorkItem.module.scss
+++ b/src/components/Works/WorkItem/WorkItem.module.scss
@@ -4,68 +4,65 @@
   text-align: left;
 
   cursor: pointer;
+}
 
-  &__imageWrapper {
-    position: relative;
+.imageWrapper {
+  position: relative;
 
-    width: 100%;
-    height: 300px;
+  width: 100%;
+  height: 300px;
 
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 
-    &:hover {
-      .item__image_hoverPreview {
-        opacity: 1;
-      }
-    } 
-  }
-
-  &__image {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-
-    object-fit: cover;
-    object-position: center;
-
-    border-radius: $borderRadius;
-    transition: 0.3s;
-
-    &_hoverPreview {
-      opacity: 0;
+  &:hover {
+    .image_hoverPreview {
+      opacity: 1;
     }
-  }
-
-  &__title {
-    margin-bottom: 10px;
-    padding-bottom: 10px;
-
-    font-size: 1.4rem;
-    font-weight: 700;
   }
 }
 
-.modalContent {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
+.image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 
-  &__info {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 420px;
+  object-fit: cover;
+  object-position: center;
+
+  border-radius: $borderRadius;
+  transition: 0.3s;
+
+  &_hoverPreview {
+    opacity: 0;
+  }
+}
+
+.title {
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+
+  font-size: 1.4rem;
+  font-weight: 700;
+}
+
+@media (max-width: $tablet) {
+  .imageWrapper {
+    height: 250px;
+  }
+}
+
+@media (max-width: $mobileL) {
+  .imageWrapper {
+    height: 220px;
   }
 
-  &__more {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
+  .title {
+    font-size: 1.2rem;
   }
+}
 
-  &__moreDesc {
-    text-align: center;
-    font-style: italic;
-    opacity: 0.7;
+@media screen and (max-width: $mobileM) {
+  .imageWrapper {
+    height: 190px;
   }
 }
