--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,5 +7,10 @@ $white: #f9f8f3;
 
 $borderRadius: 5px;
 
-$boxShadowLight: 0px 0px 8px 0px rgba(34, 60, 80, 0.2);
-$boxShadowStrong: 0px 0px 8px 2px rgba(34, 60, 80, 0.3);
+$boxShadowLight: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
+$boxShadowStrong: 0px 0px 8px 2px rgba(0, 0, 0, 0.3);
+
+$laptop: 1024px;
+$tablet: 768px;
+$mobileL: 425px;
+$mobileM: 375px; 
