--- a/src/components/PromoSlider/PromoSlider.module.scss
+++ b/src/components/PromoSlider/PromoSlider.module.scss
@@ -28,22 +28,27 @@
 .content {
   position: absolute;
   z-index: 1;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
+  top: 0;
+  right: 60px;
+  left: 60px;
+  bottom: 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
   color: $white;
   text-align: center;
 }
 
 .title {
-  margin-bottom: 5px;
+  margin-bottom: 10px;
   font-size: 3.5rem;
-  white-space: nowrap;
 }
 
 .description {
-  max-width: 410px;
+  max-width: 500px;
   margin: 0 auto;
   margin-bottom: 20px;
 
@@ -60,60 +65,48 @@
   }
 
   .description {
+    max-width: 400px;
     font-size: 1.1rem;
   }
 }
 
 @media (max-width: $tablet) {
   .container {
-    --swiper-navigation-size: 30px;
+    --swiper-navigation-size: 25px;
   }
 
   .content {
-    top: 20%;
-    left: 15px;
-    right: 15px;
-    bottom: 60px;
-    transform: translateX(0) translateY(0);
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+    left: 40px;
+    right: 40px;
   }
 
-  .title {
-    margin-bottom: 15px;
-    white-space: wrap;
-  }
-
-  .description {
-    flex-grow: 1;
-
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-
-    max-width: 320px;
-
-    font-size: 1rem;
-    font-weight: 600;
-  }
-}
-
-@media (max-width: $mobileL) {
   .title {
     font-size: 2rem;
   }
 
   .description {
-    max-width: 300px;
-    font-weight: 500;
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: $mobileL) {
+  .container {
+    --swiper-navigation-size: 20px;
+  }
+
+  .content {
+    left: 35px;
+    right: 35px;
   }
 }
 
 @media (max-width: $mobileM) {
-  .description {
-    max-width: 250px;
+  .content {
+    left: 30px;
+    right: 30px;
+  }
+
+  .title {
+    font-size: 1.8rem;
   }
 }
