--- a/src/components/UI/Accordion/AccordionItem/AccordionItem.module.scss
+++ b/src/components/UI/Accordion/AccordionItem/AccordionItem.module.scss
@@ -16,7 +16,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 10px;
+  gap: 15px;
 
   padding: 15px;
   padding-left: 30px;
@@ -74,7 +74,7 @@
 }
 
 .item {
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 
   &:last-child {
     margin-bottom: 0;
@@ -84,17 +84,33 @@
 .explanation {
   font-weight: 600;
   font-style: italic;
+  white-space: nowrap;
 }
 
-@media screen and (max-width: $tablet) {
+@media (max-width: $tablet) {
   .item {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+  }
+}
+
+@media (max-width: $mobileL) {
+  .container {
+    font-size: 1rem;
+  }
+
+  .item {
+    margin-bottom: 15px;
     font-size: 14px;
   }
 }
 
-@media screen and (max-width: $mobileL) {
-  .container {
-    font-size: 1rem;
+@media (max-width: $mobileM) {
+  .header {
+    padding-right: 10px;
+    padding-left: 20px;
+  }
+
+  .list {
+    padding: 0 5px 30px 35px;
   }
 }
