--- a/src/components/UI/BurgerMenu/BurgerMenu.module.scss
+++ b/src/components/UI/BurgerMenu/BurgerMenu.module.scss
@@ -9,7 +9,7 @@
 
 .burger {
   position: relative;
-  z-index: 10;
+  z-index: 4;
 
   width: 60px;
   height: 50px;
@@ -55,11 +55,11 @@
     }
 
     .burger__line:nth-child(1) {
-      transform: translateY(8px);
+      transform: translateY(4px);
     }
 
     .burger__line:nth-child(4) {
-      transform: translateY(-8px);
+      transform: translateY(-4px);
     }
 
     .burger__line:nth-child(2) {
@@ -78,13 +78,13 @@
   justify-content: flex-start;
   gap: 15px;
 
-  position: absolute;
-  z-index: 9;
+  position: fixed;
+  z-index: 2;
   top: 0;
   right: -100%;
 
-  width: 85vw;
-  height: 100vh;
+  width: 85%;
+  height: 100%;
 
   padding: 30px;
   padding-top: 70px;
@@ -94,22 +94,37 @@
   background-color: $black;
   transition: 0.3s;
   opacity: 0;
-  overflow-y: scroll;
+  overflow-y: auto;
   box-shadow: $boxShadowStrong;
+
+  &::before {
+    content: '';
+    position: fixed;
+    z-index: 3;
+    top: 10px;
+    right: -100%;
+
+    width: 72px;
+    height: 58px;
+
+    background-color: $black;
+    border-radius: $borderRadius;
+    transition: 0.3s;
+  }
 
   &_active {
     right: 0;
     opacity: 1;
+
+    &::before {
+      right: 10px;
+    }
   }
 }
 
 .item {
   padding: 0 5px 15px 5px;
   border-bottom: 2px solid $lightBlack;
-
-  &:last-child {
-    border-bottom: none;
-  }
 }
 
 .link {
@@ -117,7 +132,7 @@
 }
 
 .contacts {
-  flex-grow: 1;
+  margin-top: 15px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -130,11 +145,13 @@
   justify-content: flex-start;
   align-items: center;
   gap: 10px;
+
+  white-space: nowrap;
 }
 
 .overlay {
   position: fixed;
-  z-index: 8;
+  z-index: 1;
   top: 0;
   left: 0;
 
@@ -161,16 +178,10 @@
 
 @media (max-width: $mobileM) {
   .list {
-    font-size: 1.2rem;
-  }
+    width: 100%;
 
-  .contacts {
-    & svg {
-      transform: scale(0.85);
+    &::before {
+      width: 100%;
     }
-  }
-
-  .number {
-    font-size: 1rem;
   }
 }
