--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -91,6 +91,15 @@ body {
   }
 }
 
+.subTitle {
+  max-width: 500px;
+  font-size: 1.2rem;
+
+  @media screen and (max-width: $mobileL) {
+    font-size: 1rem;
+  }
+}
+
 a {
   color: inherit;
   text-decoration: none;
