--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,6 +9,7 @@
 }
 
 html {
+  min-height: -webkit-fill-available;
   scroll-behavior: smooth;
   color-scheme: dark;
 
@@ -18,6 +19,9 @@ html {
 }
 
 body {
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+
   font-family: inherit;
   font-size: 1rem;
   font-weight: 500;
