--- a/src/components/UI/Gallery/MainSlider/MainSlider.module.scss
+++ b/src/components/UI/Gallery/MainSlider/MainSlider.module.scss
@@ -1,12 +1,12 @@
 @import '@/styles/variables';
 
 .container {
-  height: 85%;
   user-select: none;
+  box-shadow: $boxShadowMin;
 }
 
 .imageWrapper {
-  height: 100%;
+  height: 425px;
 
   border-radius: $borderRadius;
   overflow: hidden;
@@ -18,4 +18,11 @@
 
   object-position: center;
   border-radius: $borderRadius;
+}
+
+@media (max-width: $tablet) {
+  .imageWrapper {
+    max-height: 425px;
+    height: 100%;
+  }
 }
