--- a/src/components/UI/Gallery/SecondSlider/SecondSlider.module.scss
+++ b/src/components/UI/Gallery/SecondSlider/SecondSlider.module.scss
@@ -1,13 +1,14 @@
 @import '@/styles/variables';
 
 .container {
-  height: 15%;
   padding-top: 15px;
   user-select: none;
 }
 
 .slide {
   max-width: 100px;
+  height: 60px;
+  box-shadow: $boxShadowMin;
 }
 
 .image {
@@ -29,5 +30,11 @@
     &:active {
       opacity: 0.7;
     }
+  }
+}
+
+@media (max-width: $mobileM) {
+  .slide {
+    height: 50px;
   }
 }
