--- a/src/components/UI/Modal/Modal.module.scss
+++ b/src/components/UI/Modal/Modal.module.scss
@@ -13,6 +13,8 @@
   right: 0;
   bottom: 0;
 
+  padding: 15px;
+
   background-color: rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(1px);
 }
@@ -21,18 +23,19 @@
   position: relative;
   z-index: 4;
 
+  
   display: flex;
   justify-content: center;
-
-  max-width: 95vw;
-  max-height: 95vh;
-
-  padding: 40px;
+  
+  max-width: $maxAppWidth;
+  max-height: 100%;
+  padding: 30px;
+  padding-top: 50px;
 
   background-color: $white;
   border-radius: $borderRadius;
   box-shadow: $boxShadowStrong;
-  overflow: hidden;
+  overflow-y: auto;
 }
 
 .close {
@@ -49,5 +52,16 @@
 
   &:hover {
     opacity: 0.7;
+  }
+}
+
+@media (max-width: $tablet) {
+  .backdrop {
+    padding: 0;
+  }
+
+  .content {
+    padding: 15px;
+    padding-top: 50px;
   }
 }
