--- a/src/components/Works/ModalContent/ModalContent.module.scss
+++ b/src/components/Works/ModalContent/ModalContent.module.scss
@@ -1,14 +1,18 @@
+@import '@/styles/variables';
+
 .container {
   display: flex;
-  justify-content: center;
+  justify-content: stretch;
   gap: 20px;
+
+  max-width: 100%;
 }
 
 .info {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 420px;
+  gap: 50px;
 }
 
 .title {
@@ -23,10 +27,49 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
+
+  &__desc {
+    text-align: center;
+    font-style: italic;
+    opacity: 0.7;
+  }
 }
 
-.moreDesc {
-  text-align: center;
-  font-style: italic;
-  opacity: 0.7;
+@media (max-width: $laptop) {
+  .container {
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .gallery {
+    max-width: 768px;
+  }
+
+  .info {
+    max-width: 768px;
+  }
+
+  .more {
+    &__button {
+      margin-bottom: 30px;
+    }
+  }
+}
+
+@media (max-width: $tablet) {
+  .more {
+    &__button {
+      margin-bottom: 15px;
+    }
+  }
+
+  .title {
+    font-size: 1.2rem;
+  }
+}
+
+@media (max-width: $mobileL) {
+  .info {
+    gap: 30px;
+  }
 }
