--- a/src/components/Screens/CategoryPage/BarkInfo/BarkInfo.module.scss
+++ b/src/components/Screens/CategoryPage/BarkInfo/BarkInfo.module.scss
@@ -1,3 +1,5 @@
+@import '@/styles/variables';
+
 .subTitle {
   margin-bottom: 20px;
 
@@ -20,4 +22,10 @@
   font-size: 1.2rem;
   font-weight: 700;
   font-style: italic;
+}
+
+@media (max-width: $mobileM) {
+  .subTitle {
+    font-size: 1.2rem;
+  }
 }
