--- a/src/components/Screens/CategoryPage/CategoryProductsList/CategoryProductsList.module.scss
+++ b/src/components/Screens/CategoryPage/CategoryProductsList/CategoryProductsList.module.scss
@@ -1,8 +1,35 @@
 @import '@/styles/variables';
 @import '@/styles/mixins';
 
+.section {
+  &_animate {
+    .title {
+      transition: 0.8s;
+      opacity: 1;
+      transform: translateX(0);
+    }
+
+    .card {
+      transition: 0.8s;
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+}
+
+.title {
+  margin-bottom: 25px;
+  opacity: 0;
+  transform: translateX(-10%);
+}
+
 .list {
   @include CardsContainer;
+}
+
+.card {
+  opacity: 0;
+  transform: translateY(10%);
 }
 
 .cardInfo {
