--- a/src/components/Advantages/Advantages.module.scss
+++ b/src/components/Advantages/Advantages.module.scss
@@ -9,6 +9,9 @@
     margin: 0 auto;
     margin-bottom: 20px;
 
+    transform: translateY(100%);
+    opacity: 0;
+
     &_we {
       color: $green;
     }
@@ -17,6 +20,9 @@
   &__tagline {
     margin: 0 auto;
     margin-bottom: 40px;
+
+    transform: translateY(-15%);
+    opacity: 0;
   }
 
   &__list {
@@ -24,10 +30,35 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
   }
+
+  &_animate {
+    .advantages {
+      &__title {
+        transition: 0.8s;
+        transform: translateY(0);
+        opacity: 1;
+      }
+
+      &__tagline {
+        transition: 0.8s 0.5s;
+        transform: translateY(0);
+        opacity: 1;
+      }
+    }
+
+    .advantage {
+      transition: 0.8s;
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
 }
 
 .advantage {
   padding: 30px;
+
+  transform: translateY(10%);
+  opacity: 0;
 
   &__title {
     margin-top: 20px;
