--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -18,6 +18,24 @@
       background-color: $white;
     }
   }
+
+  &_animate {
+    .info {
+      opacity: 1;
+      transition: 0.8s;
+    }
+
+    .title {
+      transition: 0.8s;
+      transform: translateX(0);
+      opacity: 1;
+    }
+
+    .map {
+      transition: 0.8s;
+      opacity: 1;
+    }
+  }
 }
 
 .wrapper {
@@ -32,12 +50,16 @@
 
 .info {
   flex-basis: 50%;
-
   padding: 30px;
+
+  opacity: 0;
 }
 
 .title {
   margin-bottom: 15px;
+
+  transform: translateX(-5%);
+  opacity: 0;
 }
 
 .item {
@@ -101,6 +123,10 @@
 
   border-radius: $borderRadius;
   background-color: $green;
+}
+
+.map {
+  opacity: 0;
 }
 
 @media (max-width: $laptop) {
