--- a/src/components/PromoSlider/PromoSlider.module.scss
+++ b/src/components/PromoSlider/PromoSlider.module.scss
@@ -42,11 +42,31 @@
 
   color: $white;
   text-align: center;
+
+  &_animate {
+    .title,
+    .description {
+      transform: scale(1);
+      transition: 0.8s 0.3s;
+      opacity: 1;
+      will-change: transform;
+    }
+
+    .button {
+      transition: 0.8s 0.8s;
+      opacity: 1;
+      transform: scale(1);
+      will-change: transform;
+    }
+  }
 }
 
 .title {
   margin-bottom: 10px;
   font-size: 3.5rem;
+
+  transform: scale(0.95);
+  opacity: 0;
 }
 
 .description {
@@ -55,6 +75,14 @@
   margin-bottom: 20px;
 
   font-size: 1.3rem;
+
+  transform: scale(0.95);
+  opacity: 0;
+}
+
+.button {
+  opacity: 0;
+  transform: scale(0.95);
 }
 
 @media (max-width: $laptop) {
