--- a/src/components/Screens/CategoryPage/PeatInfo/PeatInfo.module.scss
+++ b/src/components/Screens/CategoryPage/PeatInfo/PeatInfo.module.scss
@@ -1,3 +1,21 @@
+.section {
+  opacity: 0;
+
+  &_animate {
+    transition: 0.8s;
+    opacity: 1;
+
+    .title {
+      transition: 0.8s;
+      transform: translateX(0);
+    }
+  }
+}
+
+.title {
+  transform: translateX(-10%);
+}
+
 .advatages {
   margin-bottom: 20px;
 
