--- a/src/components/Screens/CategoryPage/PlantsSection/PlantsSection.module.scss
+++ b/src/components/Screens/CategoryPage/PlantsSection/PlantsSection.module.scss
@@ -1,5 +1,39 @@
+.section {
+  &_animate {
+    .title {
+      transition: 0.8s;
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    .accordion {
+      transition: 0.8s 0.4s;
+      opacity: 1;
+      transform: scale(1);
+    }
+
+    .copyrightDesc {
+      transition: 0.8s 0.8s;
+      opacity: 0.7;
+    }
+
+    .buttonWrapper {
+      transition: 0.8s 0.8s;
+      opacity: 1;
+    }
+  }
+}
+
 .title {
   margin-bottom: 30px;
+
+  opacity: 0;
+  transform: translateY(50%);
+}
+
+.accordion {
+  opacity: 0;
+  transform: scale(0.95);
 }
 
 .copyrightDesc {
@@ -11,9 +45,10 @@
 
   text-align: center;
   font-style: italic;
-  opacity: 0.7;
+  opacity: 0;
 }
 
 .buttonWrapper {
   text-align: center;
+  opacity: 0;
 }
