--- a/src/components/Services/Services.module.scss
+++ b/src/components/Services/Services.module.scss
@@ -1,11 +1,36 @@
 @import '@/styles/variables';
 @import '@/styles/mixins';
 
+.section {
+  &_animate {
+    .title{
+      transition: 0.8s;
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    .moreInfo {
+      transition: 0.8s 0.5s;
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    .accordion {
+      transition: 0.8s 0.8s;
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
+}
+
 .title {
   margin: 0 auto;
   margin-bottom: 20px;
 
   text-align: center;
+
+  opacity: 0;
+  transform: translateY(100%);
 }
 
 .moreInfo {
@@ -13,8 +38,16 @@
   margin-bottom: 40px;
 
   text-align: center;
+
+  opacity: 0;
+  transform: translateY(-15%);
 }
 
 .number {
   white-space: nowrap;
+}
+
+.accordion {
+  opacity: 0;
+  transform: scale(0.95);
 }
