--- a/src/pages/products/[category]/[id]/ProductPage.module.scss
+++ b/src/pages/products/[category]/[id]/ProductPage.module.scss
@@ -1,10 +1,29 @@
 @import '@/styles/variables';
 
+.section {
+  &_animate {
+    .title {
+      transition: 0.8s;
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    .info {
+      transition: 0.8s 0.4s;
+      opacity: 1;
+    }
+  }
+}
+
 .title {
+  max-width: 600px;
   margin: 0 auto;
   margin-bottom: 25px;
 
   text-align: center;
+
+  opacity: 0;
+  transform: translateY(10%);
 }
 
 .subTitle {
@@ -33,6 +52,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  opacity: 0;
 }
 
 .productProps {
