--- a/src/components/Works/Works.module.scss
+++ b/src/components/Works/Works.module.scss
@@ -3,7 +3,12 @@
 .section {
   text-align: center;
 
+  opacity: 0;
+
   &_animate {
+    transition: 0.8s;
+    opacity: 1;
+
     .title {
       transition: 0.8s;
       opacity: 1;
@@ -20,11 +25,6 @@
       transition: 0.8s;
       opacity: 1;
       transform: translateY(0);
-    }
-
-    .button {
-      transition: 0.8s 0.8s;
-      opacity: 1;
     }
   }
 }
@@ -57,10 +57,6 @@
 .item {
   opacity: 0;
   transform: translateY(10%);
-}
-
-.button {
-  opacity: 0;
 }
 
 @media (max-width: $laptop) {
