--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,6 +9,7 @@
 }
 
 html {
+  height: -webkit-fill-available;
   scroll-behavior: smooth;
   color-scheme: dark;
 
@@ -18,6 +19,7 @@ html {
 body {
   min-height: 100vh;
   min-height: -webkit-fill-available;
+  // height: 100vh;
   
   min-width: 320px;
   
@@ -29,6 +31,12 @@ body {
   background-color: $white;
   overflow-x: hidden;
 }
+
+// @supports (-webkit-touch-callout: none) {
+//   body {
+//     height: -webkit-fill-available;
+//   }
+// }
 
 #__next {
   display: flex;
