--- a/src/components/PromoSlider/PromoSlider.module.scss
+++ b/src/components/PromoSlider/PromoSlider.module.scss
@@ -2,6 +2,7 @@
 
 .container {
   max-height: 100vh;
+  max-height: calc(var(--vh, 1vh) * 100);
 
   background-color: $black;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
@@ -10,6 +11,7 @@
 .image {
   width: 100%;
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
 
   object-fit: cover;
   object-position: center;
