--- a/src/components/UI/Dropdown/Dropdown.module.scss
+++ b/src/components/UI/Dropdown/Dropdown.module.scss
@@ -1,6 +1,6 @@
 @import '@/styles/variables';
 
-.dropdown {
+.list {
   position: absolute;
 
   display: flex;
@@ -16,26 +16,26 @@
   pointer-events: none;
   transform: translateY(-30px);
 
-  &__link {
-    display: inline-block;
-    width: 100%;
-    padding: 10px;
-
-    white-space: nowrap;
-
-    border-radius: $borderRadius;
-    opacity: 0.8;
-
-    &:hover {
-      transition: 0.3s;
-      opacity: 1;
-      background-color: $green;
-    }
-  }
-
   &_show {
     opacity: 1;
     pointer-events: all;
     transform: translateY(0px);
+  }
+}
+
+.link {
+  display: inline-block;
+  width: 100%;
+  padding: 10px;
+
+  white-space: nowrap;
+
+  border-radius: $borderRadius;
+  opacity: 0.8;
+
+  &:hover {
+    transition: 0.3s;
+    opacity: 1;
+    background-color: $green;
   }
 }
