--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -13,6 +13,7 @@ $boxShadowStrong: 0px 0px 8px 2px rgba(0, 0, 0, 0.3);
 
 $laptop: 1024px;
 $tablet: 768px;
+$mobileXL: 600px;
 $mobileL: 425px;
 $mobileM: 375px;
 
