fix: heigth for single section page

--- a/src/components/UI/Footer/Footer.module.scss
+++ b/src/components/UI/Footer/Footer.module.scss
@@ -1,6 +1,9 @@
 @import '@/styles/variables';
 
 .footer {
+  position: relative;
+  z-index: 2;
+  
   color: $white;
 
   background-color: $black;
