--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -15,14 +15,14 @@ html {
   font-size: 16px;
 }
 
-body {  
+body {
   min-width: 320px;
-  
+
   font-family: inherit;
   font-size: 1rem;
   font-weight: 500;
   color: $black;
-  
+
   background-color: $white;
   overflow-x: hidden;
 }
@@ -56,6 +56,10 @@ body {
 
 .single-section-page {
   min-height: calc(100vh - 140px);
+
+  @media (max-width: $tablet) {
+    min-height: calc(100vh - 146px);
+  }
 }
 
 .title {
