--- a/src/components/UI/Accordion/AccordionItem/AccordionItem.module.scss
+++ b/src/components/UI/Accordion/AccordionItem/AccordionItem.module.scss
@@ -65,7 +65,7 @@
 }
 
 .list {
-  padding: 0 30px 30px 50px;
+  padding: 0 30px 0 50px;
 
   font-size: 1rem;
   font-weight: 500;
@@ -77,7 +77,7 @@
   margin-bottom: 10px;
 
   &:last-child {
-    margin-bottom: 0;
+    margin-bottom: 30px;
   }
 }
 
@@ -111,6 +111,6 @@
   }
 
   .list {
-    padding: 0 5px 30px 35px;
+    padding: 0 10px 0 35px;
   }
 }
