--- a/src/components/UI/Header/Header.module.scss
+++ b/src/components/UI/Header/Header.module.scss
@@ -8,7 +8,7 @@
 
   color: $white;
 
-  background: linear-gradient(rgba(15, 15, 15, .7),  rgba(15, 15, 15, 0));
+  background: $headerBackgroundShadow;
   transition: 0.3s;
 
   &_onMain {
