--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -18,3 +18,5 @@ $mobileL: 425px;
 $mobileM: 375px;
 
 $maxAppWidth: 1160px;
+
+$headerBackgroundShadow: linear-gradient(rgba(15, 15, 15, .7),  rgba(15, 15, 15, 0));
