--- a/src/components/Screens/CategoryPage/BarkInfo/BarkInfo.module.scss
+++ b/src/components/Screens/CategoryPage/BarkInfo/BarkInfo.module.scss
@@ -4,11 +4,11 @@
   opacity: 0;
 
   &_animate {
-    transition: 0.8s;
+    transition: opacity 0.8s;
     opacity: 1;
 
     .title {
-      transition: 0.8s;
+      transition: transform 0.8s;
       transform: translateX(0);
     }
   }
