--- a/src/components/Screens/CategoryPage/CategoryProductsList/CategoryProductsList.module.scss
+++ b/src/components/Screens/CategoryPage/CategoryProductsList/CategoryProductsList.module.scss
@@ -4,13 +4,13 @@
 .section {
   &_animate {
     .title {
-      transition: 0.8s;
+      transition: opacity 0.8s, transform 0.8s;
       opacity: 1;
       transform: translateX(0);
     }
 
     .card {
-      transition: 0.8s;
+      transition: opacity 0.8s, transform 0.8s;
       opacity: 1;
       transform: translateY(0);
     }
