--- a/src/components/UI/Gallery/SecondSlider/SecondSlider.module.scss
+++ b/src/components/UI/Gallery/SecondSlider/SecondSlider.module.scss
@@ -18,7 +18,7 @@
   object-position: center;
 
   border-radius: $borderRadius;
-  transition: 0.3s;
+  transition: opacity 300ms;
   cursor: pointer;
 
   &_notActive {
