--- a/src/components/Screens/CategoryPage/PlantsSection/PlantsSection.module.scss
+++ b/src/components/Screens/CategoryPage/PlantsSection/PlantsSection.module.scss
@@ -1,24 +1,24 @@
 .section {
   &_animate {
     .title {
-      transition: 0.8s;
+      transition: opacity 0.8s, transform 0.8s;
       opacity: 1;
       transform: translateY(0);
     }
 
     .accordion {
-      transition: 0.8s 0.4s;
+      transition: opacity 0.8s, transform 0.8s;
       opacity: 1;
       transform: scale(1);
     }
 
     .copyrightDesc {
-      transition: 0.8s 0.8s;
+      transition: opacity 0.8s 0.8s;
       opacity: 0.7;
     }
 
     .buttonWrapper {
-      transition: 0.8s 0.8s;
+      transition: opacity 0.8s 0.8s;
       opacity: 1;
     }
   }
