--- a/src/components/Screens/ProductPage/ContactsInfo/ContactsInfo.module.scss
+++ b/src/components/Screens/ProductPage/ContactsInfo/ContactsInfo.module.scss
@@ -20,7 +20,7 @@
     white-space: nowrap;
     font-size: 1.2rem;
 
-    transition: 0.3s;
+    transition: opacity 0.3s;
 
     &:hover {
       opacity: 0.7;
