--- a/src/components/UI/Accordion/AccordionItem/AccordionItem.module.scss
+++ b/src/components/UI/Accordion/AccordionItem/AccordionItem.module.scss
@@ -5,7 +5,6 @@
   font-weight: 600;
 
   border-bottom: 2px solid rgba(0, 0, 0, 0.1);
-  transition: 0.3s;
 
   &:last-child {
     border: none;
@@ -21,7 +20,6 @@
   padding: 15px;
   padding-left: 30px;
 
-  transition: 0.3s;
   cursor: pointer;
 
   &:hover {
@@ -49,12 +47,12 @@
   background-color: transparent;
   border: none;
   border-radius: 50%;
-  transition: 0.3s;
+  transition: background 300ms;
   cursor: pointer;
 
   & svg {
     will-change: transform;
-    transition: 0.3s;
+    transition: transform 300ms;
   }
 
   &_active {
