--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -16,7 +16,7 @@
   border: 2px solid transparent;
   border-radius: $borderRadius;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  transition: 0.3s;
+  transition: background 300ms;
   cursor: pointer;
 
   &:hover {
