--- a/src/components/UI/Card/Card.module.scss
+++ b/src/components/UI/Card/Card.module.scss
@@ -13,7 +13,7 @@
   box-shadow: $boxShadowLight;
   background-color: $white;
 
-  transition: 0.3s;
+  transition: box-shadow 300ms;
   overflow: hidden;
   cursor: pointer;
 
@@ -41,7 +41,7 @@
   object-fit: cover;
   object-position: center;
 
-  transition: 0.3s;
+  transition: transform 300ms;
 }
 
 .info {
