--- a/src/components/UI/Dropdown/Dropdown.module.scss
+++ b/src/components/UI/Dropdown/Dropdown.module.scss
@@ -10,7 +10,7 @@
   background-color: $lightBlack;
   box-shadow: 0 2px 10px 4px rgba(0, 0, 0, 0.2);
   border-radius: $borderRadius;
-  transition: 0.3s;
+  transition: opacity 300ms, transform 300ms;
 
   opacity: 0;
   pointer-events: none;
@@ -32,9 +32,9 @@
 
   border-radius: $borderRadius;
   opacity: 0.8;
-
+  
   &:hover {
-    transition: 0.3s;
+    transition: opacity 300ms, background 300ms;
     opacity: 1;
     background-color: $green;
   }
