--- a/src/components/UI/Header/Header.module.scss
+++ b/src/components/UI/Header/Header.module.scss
@@ -7,7 +7,7 @@
   z-index: 2;
 
   color: $white;
-  transition: 0.3s;
+  transition: background 300ms, padding 300ms, box-shadow 300ms;
 
   &_onMain {
     position: fixed;
@@ -46,7 +46,7 @@
     display: inline-block;
     padding: 25px 20px;
 
-    transition: 0.3s;
+    transition: opacity 300ms;
 
     &:hover {
       opacity: 0.7;
@@ -57,7 +57,7 @@
     place-self: center center;
     padding: 5px;
 
-    transition: 0.3s;
+    transition: opacity 300ms;
 
     &:hover {
       opacity: 0.7;
@@ -77,7 +77,7 @@
 
     white-space: nowrap;
 
-    transition: 0.3s;
+    transition: opacity 300ms;
 
     &:hover {
       opacity: 0.7;
