--- a/src/components/UI/ScrollToTop/ScrollToTop.module.scss
+++ b/src/components/UI/ScrollToTop/ScrollToTop.module.scss
@@ -17,7 +17,7 @@
   border: none;
   border-radius: $borderRadius;
   box-shadow: $boxShadowLight;
-  transition: 0.3s;
+  transition: opacity 300ms;
   cursor: pointer;
 
   opacity: 0;
